# rust-config-ini

./: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml
examples/: config.ini  example1.rs
include/: libconfig_ini.h
src/: base.rs  binds.rs  ini.rs  lib.rs  logger.rs  no_std.rs
